Actions
Bug #8639
closedlibofmt doesn't properly build its lint library
Start date:
2017-09-08
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
While working on 8507, I noticed the following lint issue:
"/ws/rm/ofmt/usr/src/lib/libofmt/common/ofmt.c", line 635: warning: name defined but never used: ofmt_check in ofmt.c(635) (E_NAME_DEF_NOT_USED2)
This was somewhat perplexing. After all the lint library was properly including the needed header file (ofmt.h) to indicate it was all to be part of the lint library. Digging into the Makefile.com file, there was a missing piece that's generally required for libraries:
+$(LINTLIB) := SRCS = $(SRCDIR)/$(LINTSRC)
With this in place, the lint library then failed to build beacuse lint couldn't parse the declaration uint_t. This is because the ofmt.h header file does not include any headers that would define this type.
Related issues
Updated by Robert Mustacchi almost 5 years ago
- Related to Bug #8640: libofmt needs to include required headers added
Updated by Robert Mustacchi almost 5 years ago
- Related to Bug #8507: dladm show-link segfaults if you specify too many fields added
Updated by Electric Monk almost 5 years ago
- Status changed from New to Closed
git commit 745cad278f6b2e392001dd1bf6b4e95d3f250a8d
commit 745cad278f6b2e392001dd1bf6b4e95d3f250a8d Author: Robert Mustacchi <rm@joyent.com> Date: 2017-09-25T18:47:02.000Z 8639 libofmt doesn't properly build its lint library 8640 libofmt needs to include required headers Reviewed by: Yuri Pankov <yuripv@gmx.com> Reviewed by: Michael Speer <michael.speer@pluribusnetworks.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions