8639 libofmt doesn't properly build its lint library 8640 libofmt needs to include required headers Reviewed by: Yuri Pankov <yuripv@gmx.com> Reviewed by: Michael Speer <michael.speer@pluribusnetworks.com> Approved by: Richard Lowe <richlowe@richlowe.net>